--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,16 @@ sitemap:
   rel: false
   tags: true
   categories: true
+
+hljs:
+  enable: true #true to enable the plugin
+  line_number: frontend # add line_number in frontend or backend (not recommend, have bugs in special hexo version)
+  trim_indent: backend # trim the indent of code block to prettify output. backend or front-end (recommend)
+  copy_code: true # show copy code in caption.
+  label:
+    left: Code
+    right: ':'
+    copy: Copy Code
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
